=========
Changelog
=========

1.0.2 (unreleased)
==================

- Nothing changed yet.


1.0.1 (2015-02-26)
==================

- Add virtualenv metadata for Python 2.4
- Keep trailing newlines when rendering templates


1.0 (2015-02-10)
================

- Add 'connect_method = vagrant' to the environment if you want to deploy
  into vagrant and use the 'vagrant ssh' invocation.

- Update internal buildout, setuptools, and execnet versions.

- Add 'update_method = rsync' to provide a simple, non-VCS specific way
  of shipping batou definitions to the remote side. This does not perform
  any conflict resolution and is mainly intended for use with vagrant.

- Supervisor: Assert that a Program should get to state "RUNNING" within
  ``startsecs`` after restarting, instead of only waiting for ``startsecs``.


1.0b33 (2015-01-28)
===================

- Fix bug in git Clone: Directly after cloning there is nothing to merge,
  so don't attempt to.


1.0b32 (2015-01-22)
===================

- Fix custom MySQL admin user when executing SQL statements.


1.0b31 (2015-01-16)
===================

- Rename a variable in ServiceCheck that conflicted with NRPEService and
  prevented custom naming of NRPE checks.


1.0b30 (2015-01-09)
===================

- A special case in error reporting caused `batou local` to exit silently
  on an error.

- Provide an easier to read error message when encountering non-converging
  working sets.

- Provide an easier to read error message when encountering cycles
  in the component dependencies.

- Fix bug in git Clone that caused breakage during update() when a fixed
  revision was specified.


1.0b29 (2014-12-12)
===================

- Make target directory on remote side configurable via
  Environment.target_directory (default is ``~/deployment``).

- Improve installation documentation w.r.t more specific instructions for
  various Linux distributions (deb- and rpm-based).
